web for GPyOpt created

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,22 +5,21 @@ color: black
 style: center
 ---
 
-### *Tune your Machine Learning algorithms or design your wetlab experiments automatically! Don't wait more!*
+# **GPyOpt**
 {: .text-purple}
 
-<center> <img  src="enigma2.jpeg" style="width:244px" align="middle"></center>
-
-# GPyOpt
+### *Tune your Machine Learning algorithms authomatically and design efficiently your wetlab experiments. Save time and money, don't wait more!*
 {: .text-purple}
 
+<center> <img  src="animation.gif" style="width:644px" align="middle"></center>
 
-Python open-source package for Bayesian Optimization. 
+GPyOpt is a Python open-source library for Bayesian Optimization. 
 
-Developed by the Machine Learning group of the Univeristy of Sheffield.
+Developed by the [Machine Learning](https://github.com/SheffieldML) group of the Univeristy of Sheffield. 
 
-Based on [GPy](http://sheffieldml.github.io/GPy/), our library for Gaussian process modeling.
+Based on [GPy](http://sheffieldml.github.io/GPy/), our python framework for Gaussian process modeling.
 
-
+Check the online [documentation](documentation) and the Reference manual in our [collection of notebooks](somewhere).
 <span id="forkongithub">
   <a href="{{ site.source_link }}" class="bg-blue">
     Fork me on GitHub
