--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -1,33 +1,17 @@
 ---
 title: "Why?"
 bg: blue
-color: white
-fa-icon: check-square-o
+color: black
+fa-icon: check-square
 ---
 
-#### Basically
-
-# this theme rocks.
-
-GPyOpt is a simple a fast way to authomatically tune your algorithms using Bayesian Optimization. 
+With GPyOpt you can:
 
 
-Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.
+1. **Solve global optimization problems**: Use Bayesian Optimization to solve global optimization problems using Gaussian processes as surrogate models. 
 
-Oh-- go see [some examples](https://github.com/t413/SinglePaged#fancy-jekyll-powered-single-page-site)!
+2. **Import GPy functionalities**: you can use any functionality of GPy in your optimization. Choose between a large variety of kernels, kernel combinations, likelihoods, etc.
 
-- Each vertical section is a markdown file in **_posts/** directory.
-  * They're sorted by 'date'. (we don't use date anywhere, it only sorts)
-- Each vertical section sets it's own **color**, **header icon** (or image), **title**, and easy-to-write markdown body.
-- Only **two things** to edit:
-  1. Edit `_config.yml` to set the site title, description, etc
-  2. Add `_posts/*.md` to make each vertical section. Copy some examples and add the sections from your README.md for a fast start!
-- Easy adding of **SEO terms**, **favicon** & such, and **google analytics token**.
+3. **Run Parallel optimization**: make use of all your computational/physical resources by optimizing your funtion of interest in parallel or by designing batches of wetlab experiments.  
 
-Sound good? Let's go!
-
-There are three way to get started: (links jump to that section)
-
-1. Make a [**user homepage**](#setup-as-user-homepage) (or organization)
-2. Make a [**standalone project**](#setup-as-standalone-project-page) page
-3. Make a [site under an **existing project**](#setup-inside-existing-project)
+4. **Run Big Data optimization**: Use sparse Gaussian process and use Bayesian optimization with massive datasets.
