--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -1,63 +1,36 @@
 ---
 title: "usage"
 bg: '#63BD2F'
-color: white
+color: black
 fa-icon: plug
 ---
 
-Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
+There are two ways of using GPyOpt: from the python command line and using a probelm/config file. 
 
-- Edit `_config.yml` to change your title, keywords, and description.
-- Create a new file in `_posts/` called `2014-01-01-intro.md`
-  Edit it, and add:
+### *GPyOpt using the command line*
 
+- Load GPyOpt:
 {% highlight text linenos=table %}
----
-title: "home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
-style: center
----
-
-# Example headline!
-and so on..
+import GPyOpt
 {% endhighlight %}
 
-- Create a second post called `2014-01-02-art.md` with an divider image this time:
-
+- Define your (minimization) problem:
 {% highlight text linenos=table %}
----
-title: "Art"
-bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
-color: white   #text color
-fa-icon: paint-brush
----
+def myf(x):
+    return (5*x)**2
 
-#### A new section- oh the humanity!
+bounds = [(-2,2)]
+
+myProblem = GPyOpt.methods.BayesianOptimization(myf,bounds)
 {% endhighlight %}
 
-**Note:** That part `fa-icon: paint-brush` will use a font-awesome icon of [paint-brush](http://fortawesome.github.io/Font-Awesome/icon/paint-brush/). You can use any icon from this [font-awesome icon directory](http://fortawesome.github.io/Font-Awesome/icons/).
 
-- install Jekyll with `sudo gem install github-pages`
-- run `jekyll serve -w`
-  - visit [localhost:4000](http://localhost:4000) to see a live locally served preview.
-- Push changes and see them live!
-
-
-
-
-## **Changing your colors**
-{: style="margin-top:100px;"}
-
-- In each post file you can define `bg: mycolor` and `color: myothercolor` to change the background and text colors for that section.
-- **mycolor** can be a quoted html color like `'#0fbfcf'` or a key to a special color defined in **_config.yml** under 'colors'.
-  - **Note:** Changes to _config.yml require a manual restart to your local server with `^C` and `jekyll serve -w`.
-
-Nifty, right!
+- Solve it!
+{% highlight text linenos=table %}
+myProblem.start_optimization()
+myProblem.x_opt
+array([ 0.00340391])
+{% endhighlight %}
 
 
-
-### Also see **README.md** [*on github!*](https://github.com/t413/SinglePaged#usage)
-{: style="margin-top:100px;"}
-
-
+### *GPyOpt using a problem/config file (TODO)*
