--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -19,7 +19,7 @@ Developed by the [Machine Learning](https://github.com/SheffieldML) group of the
 
 Based on [GPy](http://sheffieldml.github.io/GPy/), our python framework for Gaussian process modeling.
 
-Check the online [documentation](documentation) and the Reference manual in our [collection of notebooks](somewhere).
+Check the online [documentation](http://sheffieldml.github.io/GPyOpt/doc/_build/html) and the Reference manual in our [collection of notebooks](somewhere).
 <span id="forkongithub">
   <a href="{{ site.source_link }}" class="bg-blue">
     Fork me on GitHub
