--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -21,7 +21,7 @@ Based on [GPy](http://sheffieldml.github.io/GPy/), our python framework for Gaus
 
 Check the online [documentation](documentation) and the Reference manual in our [collection of notebooks](somewhere).
 <span id="forkongithub">
-  <a href="{{ site.source_link }}" class="bg-blue">
+  <a href="{{https://github.com/SheffieldML/GPyOpt}}" class="bg-blue">
     Fork me on GitHub
   </a>
 </span>
