--- a/manual/GPyOpt reference manual.ipynb
+++ b/manual/GPyOpt reference manual.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:67e3c53fafe7f5fd7ecac4921707c83c2b30c3e2f8ff7fab275665d0e26f6c6e"
+  "signature": "sha256:2e5a152b89592101435d6ee298a0e7e7dbb2922c01e1430ec0be95f8c0c53d8e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1073,6 +1073,33 @@
       }
      ],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "myProblem.acquisition_func.acquisition_function(myProblem.X)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "array([[ -2.36541290e+01],\n",
+        "       [ -1.12811560e+01],\n",
+        "       [ -1.70113517e+01],\n",
+        "       [ -2.69691902e+01],\n",
+        "       [ -0.00000000e+00],\n",
+        "       [ -1.07429790e+01],\n",
+        "       [ -1.00000000e-02],\n",
+        "       [ -1.21194398e+01]])"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
