--- a/manual/GPyOpt_large_scale.ipynb
+++ b/manual/GPyOpt_large_scale.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:efd1d11cddd5665bacebfccd542255f86894fb4a707e02753c8f41ed92ef5795"
+  "signature": "sha256:1de7b5c6b7685d067697754bfb0f8e6166874efc3749a627ca4aa1746656db4f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,11 +9,16 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "(Coming soon)"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "GPyOpt_large_scasle"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
