--- a/manual/constrained_optimization.ipynb
+++ b/manual/constrained_optimization.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "# Define a feasible region\n",
     "space =[{'name': 'var_1', 'type': 'continuous', 'domain': (-1,1)},\n",
-    "        {'name': 'var_2', 'type': 'continuous', 'domain': (-1.5,1.5)}]\n",
+    "        {'name': 'var_2', 'type': 'discrete', 'domain': (-1.5,1.5)}]\n",
     "\n",
     "constrains = [\n",
     "    {'name': 'constr_1', 'constrain': '-x[:,1] -.5 + abs(x[:,0]) - np.sqrt(1-x[:,0]**2)'},\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -182,14 +182,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.13411097,  1.5       ],\n",
+       "       [ 0.72312321, -1.5       ],\n",
+       "       [-0.81765762,  1.5       ],\n",
+       "       [-0.66217364,  1.5       ],\n",
+       "       [-0.3387854 , -1.5       ],\n",
+       "       [ 0.90945711,  1.5       ],\n",
+       "       [-0.79260339,  1.5       ],\n",
+       "       [-0.00553376, -1.5       ],\n",
+       "       [ 0.97817524,  1.5       ],\n",
+       "       [ 0.23106738, -1.5       ],\n",
+       "       [ 0.11388345, -1.5       ],\n",
+       "       [-0.5251384 , -1.5       ],\n",
+       "       [-0.0632482 , -1.5       ],\n",
+       "       [-0.06230445, -1.5       ],\n",
+       "       [ 0.12625535,  1.5       ]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# --- CHOOSE the intial design\n",
-    "initial_design = GPyOpt.util.stats.initial_design('random', feasible_region, 5)"
+    "initial_design = GPyOpt.util.stats.initial_design('random', feasible_region, 15)"
    ]
   },
   {
