--- a/manual/general GPyOPt use.ipynb
+++ b/manual/general GPyOPt use.ipynb
@@ -62,18 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "bo = GPyOpt.methods.BayesianOptimization(func.f, domain, model_type='GP_MCMC',evaluator_type='random',batch_size=4, acquisition_type ='EI_MCMC',exact_feval = True)"
+    "bo = GPyOpt.methods.BayesianOptimization(func.f, domain,constrains=constrains, model_type='GP_MCMC',evaluator_type='random',batch_size=4, acquisition_type ='EI_MCMC',exact_feval = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
