added minor changes

--- a/manual/Bandits optimization.ipynb
+++ b/manual/Bandits optimization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -18,18 +18,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "-----\n",
+      "----- Running demo. It may take a few seconds.\n",
+      "-----\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "__init__() takes at least 7 arguments (6 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-51e5908b0a29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m# BO object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mbo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGPyOpt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobjective\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0macquisition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minitial_design\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'-----'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() takes at least 7 arguments (6 given)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: pylab import has clobbered these variables: ['plt']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*Optimization completed:\n"
      ]
     }
    ],
@@ -48,8 +55,6 @@
     "\n",
     "# --- Space design (two alternative ways of defining a bandit)\n",
     "space = GPyOpt.Design_space(space =[{'name': 'var_1', 'type': 'bandit', 'domain': bandit}])\n",
-    "#space = GPyOpt.Design_space(space =[{'name': 'var_1', 'type': 'discrete', 'domain': (0.1,0.3,0.5)},\n",
-    "#                                    {'name': 'var_2', 'type': 'discrete', 'domain': (-1,0,1,2)}])\n",
     "\n",
     "# --- Objective\n",
     "objective = GPyOpt.core.task.SingleObjective(func.f, space)\n",
@@ -63,12 +68,15 @@
     "# --- CHOOSE the type of acquisition\n",
     "acquisition = GPyOpt.acquisitions.AcquisitionEI(model, space, optimizer=aquisition_optimizer)\n",
     "\n",
+    "# --- CHOOSE a collection method\n",
+    "evaluator = GPyOpt.core.evaluators.Sequential(acquisition)\n",
+    "\n",
     "# --- CHOOSE the intial design\n",
     "initial_design = GPyOpt.util.stats.initial_design('random', space, 10)\n",
     "\n",
     "\n",
     "# BO object\n",
-    "bo = GPyOpt.core.BO(model, space, objective, acquisition, initial_design)\n",
+    "bo = GPyOpt.core.BO(model, space, objective, acquisition, evaluator, initial_design)\n",
     "\n",
     "print '-----'\n",
     "print '----- Running demo. It may take a few seconds.'\n",
