constrained bo notebbok finished

--- a/manual/GPyOpt_reference_manual.ipynb
+++ b/manual/GPyOpt_reference_manual.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GPyOpt: The tool for Bayesian Optimization \n",
+    "# Introduction to Bayesian Optimization with GPyOpt \n",
     "\n",
     "### Written by Javier Gonzalez (j.h.gonzalez@sheffield.ac.uk), University of Sheffield.\n",
-    "\n",
-    "## Reference Manual index\n",
     "\n",
     "=====================================================================================================\n",
     "1. **What is GPyOpt?**\n",
@@ -35,7 +33,6 @@
    "source": [
     "## 1. What is GPyOpt?\n",
     "\n",
-    "GPyOpt (http://sheffieldml.github.io/GPy/) is a tool for optimization (minimization) of black-box functions using Gaussian processes. It is based on GPy (http://sheffieldml.github.io/GPy/) and it has been implemented in Python 2.7 (https://www.python.org/download/releases/2.7/) by the group of Machine Learning (at SITraN) of the University of Sheffield (http://ml.dcs.shef.ac.uk/sitran/). \n",
     "\n",
     "These are the main features of GPyOpt:\n",
     "\n",
@@ -60,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. How to install GPyOPt?\n",
+    "## 2. How to install GPyOpt?\n",
     "\n",
     "The simplest way to install GPyOpt is using pip. Ubuntu users can do:\n",
     "\n",
@@ -1087,7 +1084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
