more work on the manual

--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -45,9 +45,9 @@
     "\n",
     "=====================================================================================================\n",
     "\n",
-    "1. **Purpose of these notebooks**\n",
+    "1. **What is GPyOpt?**\n",
     "\n",
-    "2.  **What is GPyOpt? Installation and setup**\n",
+    "2. **Installation and setup**\n",
     "\n",
     "3. **First Steps with GPyOpt**\n",
     "\n",
@@ -72,7 +72,9 @@
     "\n",
     "GPyOpt is based on [GPy](https://github.com/SheffieldML/GPy), a library for Gaussian process modeling in Python. [Here](http://nbviewer.ipython.org/github/SheffieldML/notebook/blob/master/GPy/index.ipynb) you can also find some notebooks about GPy functionalities. GPyOpt is a tool for Bayesian Optimization but we also use it for academic dissemination in [Gaussian Processes Summer Schools](gpss.cc), where you can find some extra labs and a variety of talks on Gaussian processes and Bayesian optimization.\n",
     "\n",
-    "The purpose of this manual is to provide a guide to use GPyOpt. The framework is [BSD-3 licensed](https://opensource.org/licenses/BSD-3-Clause) and we welcome collaborators to develop new functionalities. If you have any question or suggestions about the notebooks, please contact (Javier Gonzalez) j.h.gonzalez@sheffield.ac.uk. For general questions about the package please write an issue in the [GitHub repository](https://github.com/SheffieldML/GPyOpt).\n"
+    "The purpose of this manual is to provide a guide to use GPyOpt. The framework is [BSD-3 licensed](https://opensource.org/licenses/BSD-3-Clause) and we welcome collaborators to develop new functionalities. If you have any question or suggestions about the notebooks, please contact (Javier Gonzalez) j.h.gonzalez@sheffield.ac.uk. For general questions about the package please write an issue in the [GitHub repository](https://github.com/SheffieldML/GPyOpt).\n",
+    "\n",
+    "<img src=\"./files/figures/iteration001.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n"
    ]
   },
   {
@@ -110,7 +112,7 @@
    "source": [
     "## 3. First steps with GPyOpt and Bayesian Optimization\n",
     "\n",
-    "The tutorial [Introduction to GPyOpt and Bayesian Optimization](./GPyOpt_reference_manual.ipynb) reviews some basic concepts on Bayesian optimization and shows some basic GPyOpt functionalities. It is a manual for beginners who want to start using the package."
+    "The tutorial [Introduction Bayesian Optimization GPyOpt](./GPyOpt_reference_manual.ipynb) reviews some basic concepts on Bayesian optimization and shows some basic GPyOpt functionalities. It is a manual for beginners who want to start using the package."
    ]
   },
   {
@@ -119,9 +121,9 @@
    "source": [
     "## 4. Alternative GPyOpt interfaces:  Modular Bayesian optimization and Spearmint\n",
     "\n",
-    "GPyOpt has different interfaces oriented to different types of users. Apart from the general interface (detailed in the introductory manual) you can use GPyOpt in a modular way: you can implement and use your some elements of the optimization process, such us a new model or acquisition function, but still use the main backbone of the package. You can check the [Modular Bayesian Optimization]() notebook if you are interested on using GPyOpt this way. \n",
+    "GPyOpt has different interfaces oriented to different types of users. Apart from the general interface (detailed in the introductory manual) you can use GPyOpt in a modular way: you can implement and use your some elements of the optimization process, such us a new model or acquisition function, but still use the main backbone of the package. You can check the [Modular Bayesian Optimization](./GPyOpt_modular_bayesian_optimization.ipynb) notebook if you are interested on using GPyOpt this way. \n",
     "\n",
-    "Also, we have developed and [GPyOpt interface with Spearmint](). This means that if you use Spearmint you can re-run your experiments with GPyOpt by changing only one line of code."
+    "Also, we have developed and GPyOpt interface with Spearmint. This means that if you use Spearmint you can re-run your experiments with GPyOpt by changing only one line of code."
    ]
   },
   {
@@ -151,9 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 Batch Bayesian optimization\n",
-    "\n",
-    "[GPyOpt for batch Bayesian optimization](./GPyOpt_batch_bo.ipynb) (Coming soon)"
+    "### 5.2 Batch Bayesian optimization\n"
    ]
   },
   {
@@ -183,7 +183,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.6 Objective functions benchmark"
+    "### 5.5 Integrating the model hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.6 Available models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.7 Objective functions benchmark"
    ]
   },
   {
