--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Optimization options available in GPyOpt\n",
+    "## 5. What can I do with GPyOpt?\n",
     "\n",
     "There are several options implemented in GPyOpt that allows to cover a wide range of specific optimization problems. We have implemented a collection of notebooks to explain these functionalities.\n"
    ]
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1. Bayesian optmization with restrictions"
+    "### 5.1. Bayesian optmization with arbitrary restrictions"
    ]
   },
   {
@@ -158,7 +158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 Batch Bayesian optimization\n"
+    "### 5.2 Parallel Bayesian optimization\n",
+    "The main bottleneck when using Bayesian optimization is the cost of evaluating the objective function. In the notebook [GPyOpt: parallel Bayesian Optimization](GPyOpt_parallel_optimization.ipynb) you can learn more about the different parallel methods currently implemented in GPyOPt.  \n"
    ]
   },
   {
@@ -167,7 +168,7 @@
     "collapsed": false
    },
    "source": [
-    "### 5.3 Mixing different types of variables.\n",
+    "### 5.3 Mixing different types of variables\n",
     "In GPyOpt you can easily combine different types of variables in the optimization. Currently you can use discrete an continuous variables. The way GPyOpt handles discrete variables is by marginally optimizing the acquisition functions over combinations of feasible values. This may slow down the optimization if many discrete variables are used but it avoids rounding errors. See the notebook entitled [GPyOpt: mixing different types of variables](./GPyOpt_mixed_domain.ipynb) for further details. "
    ]
   },
@@ -184,7 +185,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.5 Using various cost evaluation functions"
+    "### 5.5 Tuning scikit-learn models\n",
+    "\n",
+    "[Scikit-learn](http://scikit-learn.org/stable/) is a very popular library with a large variety of useful methods in Machine Learning. Have a look to the notebook [GPyOpt: configuring Scikit-learn methods](GPyOpt_scikitlearn.ipynb) to learn how learn the parameters of Scikit-learn methods using GPyOpt."
    ]
   },
   {
@@ -192,6 +195,13 @@
    "metadata": {},
    "source": [
     "### 5.5 Integrating the model hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.5 Using various cost evaluation functions"
    ]
   },
   {
