fixed parallel optimization and more notebooks added

--- a/manual/GPyOpt_cost_functions.ipynb
+++ b/manual/GPyOpt_cost_functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GPyOpt: available surrogate models\n",
+    "# GPyOpt: dealing with cost fuctions\n",
     "\n",
     "### Written by Javier Gonzalez, University of Sheffield.\n",
     "\n",
@@ -17,7 +17,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
