--- a/manual/GPyOpt_reference_manual.ipynb
+++ b/manual/GPyOpt_reference_manual.ipynb
@@ -7,7 +7,7 @@
     "# Introduction to Bayesian Optimization with GPyOpt \n",
     "\n",
     "\n",
-    "### Written by Javier Gonzalez (j.h.gonzalez@sheffield.ac.uk), University of Sheffield.\n",
+    "### Written by Javier Gonzalez, University of Sheffield.\n",
     "\n",
     "*Last updated Friday, 11 March 2016.*\n",
     "\n",
