--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "# GPyOpt: The tool for Bayesian Optimization \n",
     "\n",
-    "### Written by Javier Gonzalez (j.h.gonzalez@sheffield.ac.uk), University of Sheffield.\n",
+    "### Written by Javier Gonzalez, University of Sheffield.\n",
     "\n",
     "## Reference Manual index\n",
     "\n",
@@ -51,9 +51,9 @@
     "\n",
     "3. **First steps with GPyOpt and Bayesian Optimization**\n",
     "\n",
-    "4. **Alternative interfaces**\n",
+    "4. **Alternative GPyOpt interfaces:  Modular Bayesian optimization and Spearmint**\n",
     "\n",
-    "5. **What options are available in GPyOpt?**\n",
+    "5. **What can I do with GPyOpt?**\n",
     "    1. Bayesian optmization with restrictions.\n",
     "    2. Batch Bayesian optimization.\n",
     "    3. Mixing different types of variables.\n",
@@ -137,7 +137,7 @@
    "source": [
     "## 5. What can I do with GPyOpt?\n",
     "\n",
-    "There are several options implemented in GPyOpt that allows to cover a wide range of specific optimization problems. We have implemented a collection of notebooks to explain these functionalities.\n"
+    "There are several options implemented in GPyOpt that allows to cover a wide range of specific optimization problems. We have implemented a collection of notebooks to explain these functionalities separately but they can be easily combined. "
    ]
   },
   {
@@ -187,38 +187,33 @@
    "source": [
     "### 5.5 Tuning scikit-learn models\n",
     "\n",
-    "[Scikit-learn](http://scikit-learn.org/stable/) is a very popular library with a large variety of useful methods in Machine Learning. Have a look to the notebook [GPyOpt: configuring Scikit-learn methods](GPyOpt_scikitlearn.ipynb) to learn how learn the parameters of Scikit-learn methods using GPyOpt."
+    "[Scikit-learn](http://scikit-learn.org/stable/) is a very popular library with a large variety of useful methods in Machine Learning. Have a look to the notebook [GPyOpt: configuring Scikit-learn methods](GPyOpt_scikitlearn.ipynb) to learn how learn the parameters of Scikit-learn methods using GPyOpt. You will learn how to automatically tune the parameters of a Support Vector Regression."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.5 Integrating the model hyperparameters"
+    "### 5.6 Integrating the model hyper parameters\n",
+    "Maximum Likelihood estimation can be a very instable choice to tune the surrogate model hyper parameters, especially in the fist steps of the optimization. When using a GP model as a surrogate of your function you can integrate the most common acquisition functions with respect to the parameters of the model. Check the notebook [GPyOpt: integrating model hyperparameters](./GPyOpt_integrating_model_hyperparameters.ipynb) to check how to use this option.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.5 Using various cost evaluation functions"
+    "### 5.7 Using various cost evaluation functions\n",
+    "The cost of evaluating the objective can be a crucial factor in the optimization process. Check the notebook [GPyOpt: dealing with cost functions](./GPyOpt_cost_functions.ipynb) to learn how to use arbitrary cost functions, including the objective evaluation time."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.7 Objective functions benchmark"
+    "### 5.8 Currently supported surrogate models and acquistions\n",
+    "\n",
+    "GPyOpt is constantly under development. In the notebooks, [GPyOpt: available surrogate models](./GPyOpt_models.ipynb) and [GPyOpt: available acquisitions](./GPyOpt_acquisitions.ipynb) you can check the currently implemented models and acquisition functions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
