--- a/manual/GPyOpt_cost_functions.ipynb
+++ b/manual/GPyOpt_cost_functions.ipynb
@@ -14,6 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "GPyOpt allows to consider function evaluation costs in the optimization. There are two main options that can be considered: arbitrary "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
