--- a/manual/index.ipynb
+++ b/manual/index.ipynb
@@ -1,37 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require(['base/js/utils'],\n",
-       "function(utils) {\n",
-       "   utils.load_extensions('calico-spell-check');\n",
-       "});"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "require(['base/js/utils'],\n",
-    "function(utils) {\n",
-    "   utils.load_extensions('calico-spell-check');\n",
-    "});"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,12 +23,14 @@
     "4. **Alternative GPyOpt interfaces:  Modular Bayesian optimization and Spearmint**\n",
     "\n",
     "5. **What can I do with GPyOpt?**\n",
-    "    1. Bayesian optmization with restrictions.\n",
-    "    2. Batch Bayesian optimization.\n",
+    "    1. Bayesian optmization with arbitrary restrictions.\n",
+    "    2. Parallel Bayesian optimization.\n",
     "    3. Mixing different types of variables.\n",
     "    4. Armed bandits problems.\n",
+    "    5. Tuning Scikit-learn models.\n",
     "    5. Integrating the model hyperparameters.\n",
-    "    6. Available models.\n",
+    "    6. Currently supported models and acquisitions.\n",
+    "    7. Using various cost evaluations functions.\n",
     "\n",
     "=====================================================================================================\n"
    ]
@@ -202,18 +173,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.7 Using various cost evaluation functions\n",
-    "The cost of evaluating the objective can be a crucial factor in the optimization process. Check the notebook [GPyOpt: dealing with cost functions](./GPyOpt_cost_functions.ipynb) to learn how to use arbitrary cost functions, including the objective evaluation time."
+    "### 5.7 Currently supported surrogate models and acquistions\n",
+    "\n",
+    "GPyOpt is constantly under development. In the notebook [GPyOpt: available surrogate models and acquisitions](./GPyOpt_models.ipynb) you can check the currently supported models and acquisitions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.8 Currently supported surrogate models and acquistions\n",
-    "\n",
-    "GPyOpt is constantly under development. In the notebooks, [GPyOpt: available surrogate models](./GPyOpt_models.ipynb) and [GPyOpt: available acquisitions](./GPyOpt_acquisitions.ipynb) you can check the currently implemented models and acquisition functions."
+    "### 5.8 Using various cost evaluation functions\n",
+    "The cost of evaluating the objective can be a crucial factor in the optimization process. Check the notebook [GPyOpt: dealing with cost functions](./GPyOpt_cost_functions.ipynb) to learn how to use arbitrary cost functions, including the objective evaluation time."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -232,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
