changed intergrace with spearmint

--- a/manual/GPyOpt_interface_spearmint.ipynb
+++ b/manual/GPyOpt_interface_spearmint.ipynb
@@ -1,15 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# GPyOpt: interface with Spearmint\n",
+    "\n",
+    "### Written by Javier Gonzalez, University of Sheffield.\n",
+    "\n",
+    "\n",
+    "*Last updated Monday, 14 March 2016.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=./files/data/config.json width=700 height=350></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML \n",
+    "HTML('<iframe src=./files/data/config.json width=700 height=350></iframe>')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "## TODO"
-   ]
+   "source": []
   }
  ],
  "metadata": {
